fix(bootstrap4-theme): 🐛 donut charts have a z-index of -1, causing problems

--- a/packages/bootstrap4-theme/src/scss/extends/_charts-and-graphs.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_charts-and-graphs.scss
@@ -37,5 +37,5 @@ canvas {
   width: 100%;
   height: auto;
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
